--- a/iouapp/templates/register.html
+++ b/iouapp/templates/register.html
@@ -14,6 +14,14 @@
 				<a href="{{ url_for('register') }}" class="active">Register</a>
 			</div>
 			<form action="{{ url_for('register') }}" method="post" autocomplete="off">
+				<label for="firstName">
+					<i class="fas fa-user"></i>
+				</label>
+				<input type="text" name="firstName" placeholder="First Name" id="firstName" required>
+				<label for="lastName">
+					<i class="fas fa-user"></i>
+				</label>
+				<input type="text" name="lastName" placeholder="Last Name" id="lastName" required>
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
