--- a/iouapp/templates/home.html
+++ b/iouapp/templates/home.html
@@ -6,3 +6,4 @@
 <h2>Home Page</h2>
 <p>Welcome back, {{ firstName }}!</p>
 {% endblock %}
+<img src="/images/calendar.png" alt="Current calendar." width="700" height="350">
