get calendar started

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,5 @@
 {% block content %}
 <h2>Home Page</h2>
 <p>Welcome back, {{ firstName }}!</p>
+<img src="~/images/calendar-{{username}}.png" alt="Current calendar." width="700" height="350">
 {% endblock %}
-<img src="/images/calendar.png" alt="Current calendar." width="700" height="350">
