--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,7 @@
 {% block content %}
 <h2>Home Page</h2>
 <p>Welcome back, {{ firstName }}!</p>
-<img src="~/images/calendar-{{username}}.png" alt="Current calendar." width="700" height="350">
+<div>
+  <img src="http://localhost/iouapp/images/calendar-{{username}}.png" alt="Current calendar." width="700" height="350">
+</div>
 {% endblock %}
