--- a/templates/event.html
+++ b/templates/event.html
@@ -7,12 +7,12 @@
 <p>Fill out the form to add events to your schedule.</p>
 <div class = "event">
 	<form action="{{ url_for('event') }}" method="post" autocomplete="off">
-		<input type="text" name="eventName" placeholder="First Name" id="eventName" required>
+		<input type="text" name="eventName" placeholder="Event Name" id="eventName" required>
 		<input type="text" name="startTime" placeholder="Start Time" id="startTime" required>
 		<input type="text" name="endTime" placeholder="End Time" id="endTime" required>
 		<input type="text" name="startDate" placeholder="Start Date" id="startDate" required>
 		<div class="msg">{{ msg }}</div>
-		<input type="submit" value="Event">
+		<input type="submit" value="Submit">
 	</form>
 </div>
 {% endblock %}
