add next/prev buttons

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,8 @@
 </h2>
 <p>Welcome back, {{ username }}!</p>
 <div>
+  <a href="{{ url_for('prev') }}">Prev</a>
+  <a href="{{ url_for('next') }}">Next</a>
   <img src="{{ url_for('fig') }}" alt="Current calendar." width="700" height="350">
 </div>
 {% endblock %}
