make request and remove event

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,8 @@
 <h2>
   Home Page
   <a href="{{ url_for('event') }}">Add Event</a>
+  <a href="{{ url_for('event_rm') }}">Remove Event</a>
+  <a href="{{ url_for('request_mk') }}">Make Request</a>
 </h2>
 <p>Welcome back, {{ username }}!</p>
 <div>
