--- a/templates/requestMake.html
+++ b/templates/requestMake.html
@@ -5,8 +5,8 @@
 {% block content %}
 <h2>Request Coverage</h2>
 <p>Fill out the form to request event coverage.</p>
-<div class = "request_mk">
-	<form action="{{ url_for('request_mk') }}" method="post" autocomplete="off">
+<div class = "requestMake">
+	<form action="{{ url_for('requestMake') }}" method="post" autocomplete="off">
 		<input type="text" name="eventName" placeholder="Event Name" id="eventName" required>
 		<input type="text" name="startTime" placeholder="Start Time" id="startTime" required>
 		<input type="text" name="endTime" placeholder="End Time" id="endTime" required>
