--- a/static/style.css
+++ b/static/style.css
@@ -147,4 +147,11 @@ body.loggedin {
 }
 .container{ width:100%; }
 .align-left{ float: left;width:50%; }
-.align-right{ float: right;width:40%; }
+.align-right{ float: right;width:50%; }
+
+.table{
+  max-width: 100%;
+  max-height: 100%;
+  top: 0;
+  z-index: 1;
+}
