--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,7 @@
     <a href="{{ url_for('event') }}">Add Event</a>
     <a href="{{ url_for('eventRemove') }}">Remove Event</a>
     <a href="{{ url_for('requestMake') }}">Make Request</a>
+    <a href="{{ url_for('viewRequests') }}">View Requests</a>
   </div>
 </h2>
 <p>Welcome back, {{ firstName }}!</p>
@@ -20,6 +21,6 @@
   <img src="{{ url_for('fig') }}" alt="Current calendar." width="700" height="350">
 </div>
 <div align='center'>
-  <img src="{{ url_for('table') }}" alt="You have no Debt!!" width="100" height="100">
+  <img src="{{ url_for('table') }}" alt="You have no Debt!!" class="table">
 </div>
 {% endblock %}
