--- a/templates/viewRequests.html
+++ b/templates/viewRequests.html
@@ -18,6 +18,6 @@
   <img src="{{ url_for('fig') }}" alt="Current calendars." width="700" height="350">
 </div>
 <div align='center'>
-  <img src="{{ url_for('table') }}" alt="You have no Debt!!" width="100" height="100">
+  <img src="{{ url_for('tableReq') }}" alt="There are no requests" width="100" height="100">
 </div>
 {% endblock %}
