--- a/templates/viewRequests.html
+++ b/templates/viewRequests.html
@@ -13,11 +13,11 @@
 </h2>
 <p>All currently active requests are shown with your schedule and in the table below.</p>
 <div align='center'>
-  <a href="{{ url_for('prev') }}">Prev</a>
-  <a href="{{ url_for('next') }}">Next</a>
+  <a href="{{ url_for('prevReq') }}">Prev</a>
+  <a href="{{ url_for('nextReq') }}">Next</a>
   <img src="{{ url_for('fig') }}" alt="Current calendars." width="700" height="350">
 </div>
 <div align='center'>
-  <img src="{{ url_for('tableReq') }}" alt="There are no requests" width="100" height="100">
+  <img src="{{ url_for('tableReq') }}" alt="There are no requests" class="table">
 </div>
 {% endblock %}
