--- a/templates/event.html
+++ b/templates/event.html
@@ -3,7 +3,16 @@
 {% block title %}Add Event{% endblock %}
 
 {% block content %}
-<h2>Add Event</h2>
+<h2 class='container'>
+  <div class='align-left'>
+    Add Event
+  </div>
+  <div class='align-right'>
+    <a href="{{ url_for('eventRemove') }}">Remove Event</a>
+    <a href="{{ url_for('requestMake') }}">Make Request</a>
+    <a href="{{ url_for('viewRequests') }}">View Requests</a>
+  </div>
+</h2>
 <p>Fill out the form to add events to your schedule.</p>
 <div class = "event">
 	<form action="{{ url_for('event') }}" method="post" autocomplete="off">
