--- a/templates/fulfill.html
+++ b/templates/fulfill.html
@@ -3,7 +3,17 @@
 {% block title %}Fulfill Request{% endblock %}
 
 {% block content %}
-<h2>Fulfill Request</h2>
+<h2 class='container'>
+  <div class='align-left'>
+    Fulfill Request
+  </div>
+  <div class='align-right'>
+    <a href="{{ url_for('event') }}">Add Event</a>
+    <a href="{{ url_for('eventRemove') }}">Remove Event</a>
+    <a href="{{ url_for('requestMake') }}">Make Request</a>
+    <a href="{{ url_for('viewRequests') }}">View Requests</a>
+  </div>
+</h2>
 <p>Fill out the form to cover an event.</p>
 <div class = "fulfill">
 	<form action="{{ url_for('fulfill') }}" method="post" autocomplete="off">
