--- a/templates/viewRequests.html
+++ b/templates/viewRequests.html
@@ -8,6 +8,9 @@
     View Requests
   </div>
   <div class='align-right'>
+	<a href="{{ url_for('event') }}">Add Event</a>
+    <a href="{{ url_for('eventRemove') }}">Remove Event</a>
+    <a href="{{ url_for('requestMake') }}">Make Request</a>
     <a href="{{ url_for('fulfill') }}">Fulfill</a>
   </div>
 </h2>
