--- a/templates/eventRemove.html
+++ b/templates/eventRemove.html
@@ -3,7 +3,16 @@
 {% block title %}Remove Event{% endblock %}
 
 {% block content %}
-<h2>Remove Event</h2>
+<h2 class='container'>
+  <div class='align-left'>
+    Remove Event
+  </div>
+  <div class='align-right'>
+    <a href="{{ url_for('event') }}">Add Event</a>
+    <a href="{{ url_for('requestMake') }}">Make Request</a>
+    <a href="{{ url_for('viewRequests') }}">View Requests</a>
+  </div>
+</h2>
 <p>Fill out the form to remove events from your schedule.</p>
 <div class = "eventRemove">
 	<form action="{{ url_for('eventRemove') }}" method="post" autocomplete="off">
