--- a/static/style.css
+++ b/static/style.css
@@ -146,10 +146,22 @@ body.loggedin {
 	margin: 0 0 10px 0;
 }
 .container{ width:100%; }
-.align-left{ float: left;width:50%; }
-.align-right{ float: right;width:50%; }
+.align-left{
+  float: left;
+  width:50%;
+ }
+.align-right{
+  float: right;
+  width:50%;
+}
 
-.table{
+.tablehome{
+  max-width: 50%;
+  max-height: 50%;
+  top: 0;
+}
+
+.tableReq{
   max-width: 100%;
   max-height: 100%;
   top: 0;
