--- a/templates/viewRequests.html
+++ b/templates/viewRequests.html
@@ -21,6 +21,6 @@
   <img src="{{ url_for('figReq') }}" alt="Current calendars." width="700" height="350">
 </div>
 <div align='center'>
-  <img src="{{ url_for('tableReq') }}" alt="There are no requests" class="table">
+  <img src="{{ url_for('tableReq') }}" alt="There are no requests" class="tableReq">
 </div>
 {% endblock %}
