fix plotting bug

--- a/templates/event.html
+++ b/templates/event.html
@@ -24,4 +24,7 @@
 		<input type="submit" value="Submit">
 	</form>
 </div>
+<div align='center'>
+  <img src="{{ url_for('fig') }}" alt="Generating calendar . . ." width="700" height="350">
+</div>
 {% endblock %}
