--- a/templates/fulfill.html
+++ b/templates/fulfill.html
@@ -26,8 +26,6 @@
 	</form>
 </div>
 <div align='center'>
-  <a href="{{ url_for('prevReq') }}">Prev</a>
-  <a href="{{ url_for('nextReq') }}">Next</a>
-  <img src="{{ url_for('figReq') }}" alt="Current calendars." width="700" height="350">
+  <img src="{{ url_for('figReq') }}" alt="Generating calendars . . ." width="700" height="350">
 </div>
 {% endblock %}
