--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 <div align='center'>
   <a href="{{ url_for('prev') }}">Prev</a>
   <a href="{{ url_for('next') }}">Next</a>
-  <img src="{{ url_for('fig') }}" alt="Current calendar." width="700" height="350">
+  <img src="{{ url_for('fig') }}" alt="Generating calendar . . ." width="700" height="350">
 </div>
 <div align='center'>
   <img src="{{ url_for('table') }}" alt="You have no Debt!!" class="tablehome">
