--- a/templates/eventRemove.html
+++ b/templates/eventRemove.html
@@ -22,4 +22,7 @@
 		<input type="submit" value="Remove">
 	</form>
 </div>
+<div align='center'>
+  <img src="{{ url_for('fig') }}" alt="Generating calendar . . ." width="700" height="350">
+</div>
 {% endblock %}
