--- a/templates/viewRequests.html
+++ b/templates/viewRequests.html
@@ -18,7 +18,7 @@
 <div align='center'>
   <a href="{{ url_for('prevReq') }}">Prev</a>
   <a href="{{ url_for('nextReq') }}">Next</a>
-  <img src="{{ url_for('figReq') }}" alt="Current calendars." width="700" height="350">
+  <img src="{{ url_for('figReq') }}" alt="Generating calendars . . ." width="700" height="350">
 </div>
 <div align='center'>
   <img src="{{ url_for('tableReq') }}" alt="There are no requests" class="tableReq">
